test_regress/t/t_math_countbits_bad.out
%Error-UNSUPPORTED: t/t_math_countbits_bad.v:14:54: Unsupported: $countbits with more than 3 control fields
   14 |    assign count = $countbits(32'h123456, '0, '1, 'x, 'z);
      |                                                      ^~
%Error: Exiting due to
